# ProgTechnologies

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: CMakeLists.txt  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: CMakeLists.txt  TEST.cpp  main.cpp  main_test.cpp
task2/C/A/: index.h  preparing.py
task2/C/B/: CMakeLists.txt
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/: .gitignore  main.py
task4/src/tree_utils_02/: tree.py
task4/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task4/tests/test_03/: test_weather.py
