add_executable(C main.cpp)
target_include_directories(C PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(C PUBLIC lib index)
enable_testing()
find_package(GTest REQUIRED)
add_executable(CTest main_test.cpp)
target_include_directories(CTest PUBLIC ${PROJECT_SOURCE_DIR} ${GTEST_INCLUDE_DIRS})
target_link_libraries(CTest PUBLIC lib index ${GTEST_LIBRARIES} Threads::Threads)
add_test(CTest ${CMAKE_SOURCE_DIR}/bin/GTest)
